# world_entity

./: CMakeLists.txt  README.md
include/: guid.h  world_entity.h  world_entity_public.h
src/: guid.cpp  world_entity.cpp
